--- a/Mod2FPIndex.html
+++ b/Mod2FPIndex.html
@@ -30,6 +30,7 @@
     </section>
 
     <section id="start">
+        <container class="container__start">
         <row class="start">
             <container class="sign-up">
                 <h1 class="sign-up__intro">Beautiful React Templates <span class="color__purple">for you.</span></for></h1>
@@ -50,6 +51,7 @@
                 </figure>
             </container>
         </row>
+        </container>
     </section>
 
     <section id="features">
@@ -125,5 +127,56 @@
             </div>
         </row>
     </section>
+
+    <section id="quality">
+        <row class="quality__wrapper">
+            <div class="quality__headline">
+                <h4 class="color__purple quality">QUALITY WORK  </h4>
+                <h1 class="quality__title">Designed & Developed by <span class="color__purple">Professionals.</span></h1>
+                <p class="quality__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <button class="btn quality__btn">Learn More</button>
+            </div>
+            <div class="quality__spacer"></div>
+            <figure class="quality__img--wrapper">
+                <img src="./Mod2FPassets/hero-screenshot-1.40a097b525c2f8c9808e.png" class="quality__img" alt="">
+            </figure>
+        </row> 
+    </section>
+    
+    <section id="steps">
+        <row class="steps__row">
+            <figure class="steps__img--wrapper">
+                <img src="./Mod2FPassets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
+            </figure>
+            <div class="steps__list--wrapper">
+                <h4 class="color__purple quality">STEPS</h4>
+                <h1 class="quality__title">Easy to <span class="color__purple">Get Started.</span></h1>
+                <ul class="steps__list">
+                    <li class="steps__1-2-3">
+                        <div class="step__number">01</div>
+                        <div class="steps__title">Register</div>
+                        <div class="quality__description">Create and account with us using Google or Facebook</div>
+                    </li>
+
+                    <li class="steps__1-2-3">
+                        <div class="step__number">02</div>
+                        <div class="quality__title">Download</div>
+                        <div class="steps__description">Browse and Download the template that you like from the marketplace.</div>
+                    </li>
+
+                    <li class="steps__1-2-3">
+                        <div class="step__number">03</div>
+                        <div class="quality__title">Run</div>
+                        <div class="quality__description">Follow the instructions to setup and customize the template to your needs.</div>
+                    </li>
+                </ul>
+
+
+            </div>
+
+
+        </row>
+    </section>
+        
 </body>
 </html>
