--- a/Mod2FPIndex.html
+++ b/Mod2FPIndex.html
@@ -145,34 +145,46 @@
     
     <section id="steps">
         <row class="steps__row">
-            <figure class="steps__img--wrapper">
+            <container class="steps__img--container">
+              <figure class="steps__img--wrapper">
                 <img src="./Mod2FPassets/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
-            </figure>
-            <div class="steps__list--wrapper">
+              </figure>
+            </container>
+            <container class="steps__list--wrapper">
                 <h4 class="color__purple quality">STEPS</h4>
                 <h1 class="quality__title">Easy to <span class="color__purple">Get Started.</span></h1>
                 <ul class="steps__list">
                     <li class="steps__1-2-3">
-                        <div class="step__number">01</div>
-                        <div class="steps__title">Register</div>
-                        <div class="quality__description">Create and account with us using Google or Facebook</div>
+                        <div class="step__number">
+                            <p class="p__number">01</p>
+                        </div>
+                        <div class="steps__text">
+                          <h2 class="steps__title">Register</h2>
+                          <p class="quality__description">Create and account with us using Google or Facebook</p>
+                        </div>
                     </li>
 
                     <li class="steps__1-2-3">
-                        <div class="step__number">02</div>
-                        <div class="quality__title">Download</div>
-                        <div class="steps__description">Browse and Download the template that you like from the marketplace.</div>
+                        <div class="step__number">
+                            <p class="p__number">02</p>
+                        </div>
+                        <div class="steps__text">
+                          <h2 class="steps__title">Download</h2>
+                          <p class="quality__description">Browse and Download the template that you like from the marketplace.</p>
+                        </div>
                     </li>
 
                     <li class="steps__1-2-3">
-                        <div class="step__number">03</div>
-                        <div class="quality__title">Run</div>
-                        <div class="quality__description">Follow the instructions to setup and customize the template to your needs.</div>
+                        <div class="step__number">
+                            <p class="p__number">03</p>
+                        </div>
+                        <div class="steps__text">
+                        <h2 class="steps__title">Run</h2>
+                        <p class="quality__description">Follow the instructions to setup and customize the template to your needs.</p>
+                        </div>
                     </li>
                 </ul>
-
-
-            </div>
+            </container>
 
 
         </row>
