values section update

--- a/Mod2FPIndex.html
+++ b/Mod2FPIndex.html
@@ -54,8 +54,8 @@
         </container>
     </section>
 
-    <section id="features">
-        <row class="features__wrapper">
+    <section>
+        <row class="features__row">
             <div class="features__headline">
                 <h4 class="color__purple features__top">FEATURES</h4>
                 <h1 class="features__title">We have Amazing <span class="color__purple">Service.</span></h1>
@@ -128,8 +128,8 @@
         </row>
     </section>
 
-    <section id="quality">
-        <row class="quality__wrapper">
+    <section>
+        <row class="quality__row">
             <div class="quality__headline">
                 <h4 class="color__purple quality">QUALITY WORK  </h4>
                 <h1 class="quality__title">Designed & Developed by <span class="color__purple">Professionals.</span></h1>
@@ -143,7 +143,7 @@
         </row> 
     </section>
     
-    <section id="steps">
+    <section>
         <row class="steps__row">
             <container class="steps__img--container">
               <figure class="steps__img--wrapper">
@@ -185,9 +185,96 @@
                     </li>
                 </ul>
             </container>
+        </row>
+    </section>
 
+    <section>
+        <row class="values__row">
+
+            <div class="values__wrapper">
+              <div class="values__description-wrapper">
+                <h4 class="values__super-title">values</h4>
+                <h1 class="values__title">We Always Abide by Our <span class="color__purple">Principles.</span></h1>
+                <p class="values__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias assumenda facere voluptates, iusto aliquid voluptas voluptate corrupti, consequatur quia eius deleniti pariatur labore voluptatum vero aut sequi obcaecati asperiores. Voluptas!</p>
+              </div>
+              <div class="values__bullet-points">
+                <ul class="values__points">
+                    <li class="values__point">
+                        <div class="value__title">
+                        <figure class="value__dollar--wrap">
+                            <img src="./Mod2FPassets/dollar-sign green.svg" class="value__dollar--img" alt="">
+                        </figure>
+                        <h3 class="value__name">Affordable</h3>
+                        </div>
+                        <div class="value__description">
+                            <p class="description">We promise to offer you the best rate we can -at par with the industry standard.</p>
+                        </div>                    
+                    </li>
+
+                    <li class="values__point">
+                        <div class="value__title">
+                        <figure class="value__briefcase--wrap">
+                            <img src="./Mod2FPassets/briefcase pink.svg" class="value__case--img" alt="">
+                        </figure>
+                        <h3 class="value__name">Professionalism</h3>
+                        </div>
+                        <div class="value__description">
+                            <p class="description">We assure you that our templates are designed and created by professional designers.</p>
+                        </div>                    
+                    </li>
+
+                </ul>
+
+              </div>
+             <div class="btn values__btn">
+                Learn More
+             </div>
+            </div> 
+
+             <div class="values__img--container">
+             <figure class="values__img--wrapper">
+                <img src="./Mod2FPassets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" class="values__img" alt="">
+             </figure>
+            </div>
 
         </row>
+    </section>
+
+    <section>
+        <div class="pricing__row">
+
+            <div class="pricing__title--wrapper">
+              <h4 class="pricing__super-title">pricing</h4>
+              <h1 class="pricing__title">Reasonable & Flexible <span class="color__purple">Plans.</span></h1>
+              <p class="pricing__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sapiente error unde molestias ipsa possimus ad delectus dolore cum facilis!</p>
+            </div>
+
+            <div class="pricing__option--boxes">
+                <ul class="pricing__boxes">
+                    <li class="pricing__details">
+                        <div class="pricing__box personal__price">
+                            <div class="pricing-stripe__personal"></div>
+                            <p class="plan__type">PERSONAL</p>
+                            <p class="plan__price">$17.99</p>
+                            <p class="plan__duration">MONTHLY</p>
+                            <hr>
+                            <p class="plan__consumer">For Individuals</p>
+                            <p class="plan__feature">30 Templates</p>
+                            <p class="plan__feature">7 Landing Pages</p>
+                            <p class="plan__feature">12 Internal Pages</p>
+                            <p class="plan__feature">Basic Assistance</p>
+                            <hr>
+                            <button btn__buy btn__personal>BUY NOW</button>                        
+                        </div>
+                    </li>
+
+
+
+
+                </ul>
+
+            </div>
+        </div>
     </section>
         
 </body>
