start section begin

--- a/Mod2FPIndex.html
+++ b/Mod2FPIndex.html
@@ -32,7 +32,7 @@
     </section>
 
     <section>
-        <div class="start__row">
+        <div class="sign-up__row">
             <div class="sign-up">
                 <h1 class="sign-up__intro">Beautiful React Templates <span class="color__purple">for you.</span></for></h1>
                 <p class="sign-up__description" >Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
@@ -367,6 +367,20 @@
               </div>
         </div>
         </div>    
+    </section>
+
+    <section>
+        <div class="start__row">
+            <div class="start__wrap">
+              <p class="start__title">Developers all over the world are happily using Treact.</p>
+              <div class="start__btn"></div>
+              <button class="btn__start">Get Started</button>
+              <button class="btn__contact">Contact Us</button>
+            </div>
+        </div>
+        </div>
+
+
     </section>
         
 </body>
