first at media update

--- a/Mod2FPIndex.html
+++ b/Mod2FPIndex.html
@@ -11,7 +11,7 @@
 <body>
     <section id="nav">
         <nav>
-            <row class="nav">
+            <div class="nav__row">
             <div class="logo">
                 <figure class="logo__img--wrapper">
                 <img src="./Mod2FPassets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="logo__img" alt="">
@@ -28,7 +28,7 @@
                 <li class="nav__link"><a href="" class="btn nav__link--btn">Sign up</a></li>
             </ul>
             </row>
-        </nav>
+        </div>
     </section>
 
     <section>
