at media update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="nav">
         <nav>
-            <div class="nav__row">
+        <div class="nav__row">
             <div class="logo">
                 <figure class="logo__img--wrapper">
                 <img src="./Mod2FPassets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="logo__img" alt="">
@@ -31,21 +31,20 @@
             <button class="btn__menu btn__menu--open" onclick="openMenu()">
                <i class="fa-solid fa-bars"></i>
             </button>
-           
-        <div class="menu__backdrop">
-          <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-            <i class="fa-solid fa-times"></i>
-          </button>
-          <ul class="menu__links">
-            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
-            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
-            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
-            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
-            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Log In</a></li>
-            <li class="menu__list"><a href="" class="menu__link no-cursor btn" onclick="closeMenu()">Sign Up</a></li>
-          </ul> 
-        </div class="nav__row">
         </div>
+            <div class="menu__backdrop">
+                <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                    <i class="fa-solid fa-times"></i>
+                </button>
+                <ul class="menu__links">
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Log In</a></li>
+                    <li class="menu__list"><a href="" class="menu__link no-cursor btn" onclick="closeMenu()">Sign Up</a></li>
+                </ul> 
+            </div>
     </section>
 
     <section>
@@ -349,13 +348,13 @@
     <section>
         <div class="testamonials__row">
 
-         <div class="testamonials__img--container">
+            <div class="testamonials__img--container">
              <figure class="testamonials__img--wrapper">
                 <img src="./Mod2FPassets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" class="values__img" alt="">
              </figure>
             </div>   
 
-        <div class="testamonials__title--wrapper">
+            <div class="testamonials__title--wrapper">
               <h4 class="testamonials__super-title">TESTAMONIALS</h4>
               <h1 class="testamonials__title">Our Clients <span class="color__purple">Love Us.</span></h1>
               <p class="testamonials__description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sapiente error unde molestias ipsa possimus ad delectus dolore cum facilis!</p>
@@ -374,6 +373,7 @@
                         <p class="client__title">Director, Delos Inc.</p>
                     </div>
                 </figure>
+                <div class="btn__testamonials--wrapper">
                 <div class="btn__testamonials">
                     <i class="fa-solid fa-arrow-left" style="color: #6415ff"></i>
                 </div>
@@ -381,8 +381,9 @@
                 <div class="btn__testamonials">
                     <i class="fa-solid fa-arrow-right" style="color: #6415ff"></i>
                 </div>
+             </div>
               </div>
-        </div>
+            </div>
         </div>    
     </section>
 
@@ -390,9 +391,10 @@
         <div class="start__row">
             <div class="start__wrap">
               <p class="start__title">Developers all over the world are happily using Treact.</p>
-              <div class="start__btn"></div>
+              <div class="start__btn">
               <button class="btn__start">Get Started</button>
               <button class="btn__contact">Contact Us</button>
+              </div>
             </div>
         </div>
         </div>
